--- a/content-web/src/index.html
+++ b/content-web/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>MTK TraceA3 - Contoso Neuro 2017 Conference </title>
+  <title>Contoso Neuro 2017 Conference </title>
   <base href="/">
   <link rel="image_src" type="image/gif" href="https://techintersection.comassets/images/Contoso Neuro 2016_2015_banner.gif"/>
 
